--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/* TYPOGRAPHY */
+h1, h2, h3{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
+h4, h5{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 600;
+}
+p{
+    font-family: 'Noto Sans', sans-serif;
+}
+
 #covidNotice{
     width: 100%;
     background-color: yellow;
@@ -6,11 +19,18 @@
     z-index: 100;
 }
 
+/* NAVBAR */
 .customNav{
     position: fixed;
     z-index: 100;
     width: 100%;
-    background-color: transparent !important;
+    background: transparent !important;
+    }
+.customNavScroll{
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    background: white !important;
     }
 .navbar-nav{
     margin-left: auto;
