--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ p{
     z-index: 100;
     width: 100%;
     margin-top: 24px;
-    background: transparent !important;
+    /* background: transparent !important; */
     }
 .customNavScroll{
     position: fixed;
@@ -51,19 +51,23 @@ p{
     box-shadow: black; */
     border-radius: 5px;
 }
+.navbar-brand img{
+    height: 40px;
+}
 .navbar-brand-customMobile{
     display: none;
+    background-color: #65A739;
 }
-.nav-link{
+/* .nav-link{
     color: white !important;
-}
+} */
 .navbar-toggler{
     margin-left: auto;
     margin-right: 0 !important;
   }
-.navbar-toggler{
+/* .navbar-toggler{
     color: white !important;
-}
+} */
 .spacer{
     height: 40px;
 }
@@ -73,7 +77,7 @@ p{
     width: 100% !important;
 }
 .carouselspacer{
-    height: 24px;
+    height: 80px;
 }
 .overlay {
     position: absolute;
