--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,9 @@ p{
 /* SUNDAY WORSHIP SERVICE */
 #sundayService{
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(../images/baptism.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     color: white;
 }
 #swsLayout{
