--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ p{
 
 /* FOOTER */
 footer{
-    background-color:rgba(102, 167, 58, 0.75) !important;
+    background-color:#65A739 !important;
     padding: 40px;
     display: grid;
     grid-template-rows: auto;
